CHANGELOG XX XXXX 2010 Pierre Frisch
Rev the source code to 3.2.1
ServiceInfo.setText() reannounces updated service only once - ID: 3030016
unregisterService - ID: 3040520
Maven depository update - ID: 1432672
Maven POM file - ID: 3047223

CHANGELOG 08 July 2010 Pierre Frisch
Rev the source code to 3.2.0
Add subtypes - ID: 1582803

CHANGELOG 27 June 2010 Pierre Frisch
Rev the source code to 3.1.8
JmDNS fails to get ServiceInfo from cache - ID: 3018122
Avahi DNS entries lost after an hour - ID: 3015920
No IPv6 address returned by getAddress - ID: 1952439
JmDNS.list() no longer provides results - ID: 3019756

CHANGELOG 10 June 2010 Pierre Frisch
Rev the source code to 3.1.7
********* Reorganization of the locking  / timer strategy. Hopefully it should be less deadlock prone. *********
index out of range exception in javax.jmdns.JmDNS	 - ID: 1414816
Optimization in JmDNS.SocketListener - ID: 1623129
JMDNS reports IPv6 link local addr as service type - ID: 1791481
JmDNSImpl.openMulticastSocket() fails on AIX - ID: 2821919
Service discovery takes about 6 s - FIX - ID: 2910895
Update text field and receive text updates. - ID: 2349331
Make listening interface and port configurable - ID: 3000610
Add extra API to read protocol and domain - ID: 3000616
Replace outdated/inofficial "._mdns._udp." meta query with o - ID: 3000618
Build OSGi bundle as part of ANT build - ID: 3000972

CHANGELOG 5 April 2010 Pierre Frisch
Rev the source code to 3.1.6
Fix an issue in the discovery where the values where not correctly retrieved from the cache.
Bug in method JmDNSImpl.openMulticastSocket - ID: 2980409
JmDNSImpl DNS Cache Entry Removal - ID: 2981167
Bug in Pointer.getServiceInfo() - ID: 2980727
TXT String not set when ServiceInfo retrieved from the Cache - ID: 2982114

CHANGELOG 30 March 2010 Pierre Frisch
Rev the source code to 3.1.5
Reorg or the Responser code to make more modular and easy to understand.
Added support for variable response length from EDNS